--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
 PORT=3000
 NODE_ENV=development
 
-JWT_SECRET=secret
-JWT_EXPIRES_IN=7d
+JWT_ACCESS_SECRET=secret
+JWT_REFRESH_SECRET=secret2
+JWT_ACCESS_EXPIRE=7d
+JWT_REFRESH_EXPIRE=7d
 
 CORS_ORIGIN=http://localhost:5173
